[package]
name = "usb-installer-node"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
regex = "1"
toml = "0.8"
nix = { version = "0.30.1", features = ["process", "user"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
